RESOLVED FIXED27268
[V8] Fix isolated world crash on getting window.location
https://bugs.webkit.org/show_bug.cgi?id=27268
Summary [V8] Fix isolated world crash on getting window.location
Adam Barth
Reported 2009-07-14 11:20:02 PDT
The isolated world crashes it tries to get window.location. We shouldn't crash. Patch forthcoming.
Attachments
patch (1.98 KB, patch)
2009-07-14 11:27 PDT, Adam Barth
dglazkov: review+
Adam Barth
Comment 1 2009-07-14 11:27:14 PDT
Dimitri Glazkov (Google)
Comment 2 2009-07-14 14:31:34 PDT
Comment on attachment 32723 [details] patch ok.
Adam Barth
Comment 3 2009-07-14 14:36:16 PDT
Assigned to myself for landing.
Adam Barth
Comment 4 2009-07-14 16:09:24 PDT
Sending WebCore/ChangeLog Sending WebCore/bindings/v8/V8DOMWrapper.cpp Sending WebCore/bindings/v8/V8IsolatedWorld.h Transmitting file data ... Committed revision 45880. http://trac.webkit.org/changeset/45880
Note You need to log in before you can comment on or make changes to this bug.