2009-07-14  Adam Barth  <abarth@webkit.org>

Reviewed by Dimitri Glazkov.

        [V8] Fix isolated world crash on getting window.location
        https://bugs.webkit.org/show_bug.cgi?id=27268

        I have a test for this locally, but it requires a compile-time hack to
        run.  Once I get the feature's stability under control, we can turn the
        feature on and add the tests.

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::setHiddenWindowReference):
        * bindings/v8/V8IsolatedWorld.h:
        (WebCore::V8IsolatedWorld::context):



Canonical link: https://commits.webkit.org/37510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45880 268f45cc-cd09-0410-ab3c-d52691b4dbfc